# mandelbrot-set-rust

./: Cargo.toml  README.md
src/: constants.rs  helpers.rs  main.rs  types.rs
src/app/: draw.rs  input.rs  mod.rs  util.rs
